crates/app/src/snapshots/tidal_player__ui__tests__ac14_library_30_50.snap
---
source: crates/app/src/ui.rs
assertion_line: 2215
expression: text
---
┌tidal-player──────────────────────────────────────────────────────────────────┐
│▶ Hell Above · Pierce The Veil                     shuffle  repeat: queue  80%│
│  Collide With The Sky                                                        │
│  LOSSLESS FLAC 16-bit 44.1 kHz → hw:1,0 · not bit-perfect: volume below 100% │
│  ━━━━━━━━━━━━━━━━━━━━━━━━━──────────────────────────────────────  1:23 / 3:32│
│Library                                                                       │
│┌Playlists (22)───────┐┌Albums (14)──────────────────────────┐┌Artists (196)─┐│
││  Running          42││Collide With The…  Pierce The…   2012││Pierce The Ve…││
││♥ Late night       17││Misadventures      Pierce The…   2016││Sleeping With…││
││  Gym mix           8││Hold On Till May   Pierce The…   2010││Bring Me The… ││
││                     ││                                     ││              ││
││                     ││                                     ││              ││
││                     ││                                     ││              ││
││                     ││                                     ││              ││
││                     ││                                     ││              ││
││                     ││                                     ││              ││
││                     ││                                     ││              ││
││                     ││                                     ││              ││
││                     ││                                     ││              ││
││                     ││                                     ││              ││
││                     ││                                     ││              ││
││                     ││                                     ││              ││
│└─────────────────────┘└─────────────────────────────────────┘└──────────────┘│
└──────────────────────────────────────────────────────────────────────────────┘
