crates/app/src/snapshots/tidal_player__ui__tests__ac14_login_required_80x24.snap
---
source: crates/app/src/ui.rs
expression: text
---
┌tidal-player──────────────────────────────────────────────────────────────────┐
│Nothing playing                                                               │
│                                                                              │
│                                                                              │
│                                                                              │
│┌Queue (0)───────────────────────────────────────────────────────────────────┐│
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
│└────────────────────────────────────────────────────────────────────────────┘│
│Session expired — run "tidal-player login" in another terminal                │
└──────────────────────────────────────────────────────────────────────────────┘
