crates/app/src/snapshots/tidal_player__ui__tests__ac14_restore_message_80x24.snap
---
source: crates/app/src/ui.rs
expression: text
---
┌tidal-player──────────────────────────────────────────────────────────────────┐
│Nothing playing                                                           100%│
│                                                                              │
│  Could not restore the playback state (kept as playback.json.bad): EOF while…│
│                                                                              │
│┌Queue (0)───────────────────────────────────────────────────────────────────┐│
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
│└────────────────────────────────────────────────────────────────────────────┘│
└──────────────────────────────────────────────────────────────────────────────┘
