crates/app/src/snapshots/tidal_player__ui__tests__ac17_actions_popup.snap
---
source: crates/app/src/ui.rs
expression: text
---
┌tidal-player──────────────────────────────────────────────────────────────────┐
│▶ Hell Above · Pierce The Veil                     shuffle  repeat: queue  80%│
│  Collide With The Sky                                                        │
│  LOSSLESS FLAC 16-bit 44.1 kHz → hw:1,0 · not bit-perfect: volume below 100% │
│  ━━━━━━━━━━━━━━━━━━━━━━━━━──────────────────────────────────────  1:23 / 3:32│
│Library                                                                       │
│┌Playlists (22)───────────────┐┌Albums (14)──────────────────┐┌Artists (196)─┐│
││  Running                  42││Collide With Th…  Pierce The…││Pierce The Ve…││
││♥ Late night               17││Misadventures     Pierce The…││Sleeping With…││
││  Gym mix            ┌Collide With The Sky───────────┐e The…││Bring Me The… ││
││                     │ Open                          │      ││              ││
││                     │ Go to artist: Pierce The Veil │      ││              ││
││                     │ Add to queue                  │      ││              ││
││                     │ Play next                     │      ││              ││
││                     │ Add to favorites              │      ││              ││
││                     │ Remove from favorites         │      ││              ││
││                     │ Add to playlist…              │      ││              ││
││                     └───────────────────────────────┘      ││              ││
││                             ││                             ││              ││
││                             ││                             ││              ││
││                             ││                             ││              ││
││                             ││                             ││              ││
│└─────────────────────────────┘└─────────────────────────────┘└──────────────┘│
└──────────────────────────────────────────────────────────────────────────────┘
